--- a/src/components/card.css
+++ b/src/components/card.css
@@ -5,13 +5,16 @@
   height: 100vh;
 }
 .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   transition: all 1s ease;
-  transform:  translate(5s);
+  width: 400px;
+  height: 400px;
+  border: 2px solid rebeccapurple;
+  transform: translate(5s);
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 60px;
+  align-items: flex-end;
 }
-.card i{
-    font-size: 100px;
-    cursor: pointer;
+span{
+  cursor: pointer;
 }
